Add a renderer of toji

--- a/index.html
+++ b/index.html
@@ -3,15 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Toji</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="index.css">
 	</head>
 	<body>
-		<div class="container">
-			<header>
-				<h1>Toji</h1>
-			</header>
-			<section class="main"></section>
-			<footer></footer>
-		</div>
+    <header>toji</header>
+    <section class="main"></section>
 	</body>
+  <script type="text/javascript" src="./renderer.js"></script>
 </html>
