--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>Toji</title>
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="index.css">
-	</head>
-	<body>
-    <header>toji</header>
-    <section class="main"></section>
-	</body>
-  <script type="text/javascript" src="./renderer.js"></script>
+
+<head>
+  <meta charset='utf-8'>
+  <title>Toji</title>
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
+  <link rel='stylesheet' href='index.css'>
+</head>
+
+<body>
+  <header>
+    <a class='back hide'><i class='fa fa-chevron-left'></i></a>
+    <a class='settings'><i class='fa fa-cog'></i></a>
+    <span>toji</span>
+  </header>
+  <section class='root'></section>
+</body>
+<script type='text/javascript' src='./renderer.js'></script>
+
 </html>
+
