Add settings form

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <a class='back hide'><i class='fa fa-chevron-left'></i></a>
-    <a class='settings'><i class='fa fa-cog'></i></a>
+    <a class='gear'><i class='fa fa-cog'></i></a>
     <span>toji</span>
   </header>
   <section class='root'></section>
