--- a/app/settings.html
+++ b/app/settings.html
@@ -1,4 +1,8 @@
 <div class='settings'>
-  <input type="text" id="shortcut-open" value="ctrl+space">
-  <button type="submit">Save</button>
+  <h4>Toji Hotkey</h4>
+  <form>
+    <input type='text' id='toggke-key' value='ctrl+space'>
+    <small>Please see all the available keys on <a href='https://github.com/electron/electron/blob/master/docs/api/accelerator.md' target='blank'>Accelerator</a></small>
+    <button type="submit"><i class='fa fa-pencil'></i> Save</button>
+  </form>
 </div>
