Save user preferences to app.getPath('userData')

--- a/app/settings.html
+++ b/app/settings.html
@@ -1,7 +1,7 @@
 <div class='settings'>
   <h4>Toji Hotkey</h4>
-  <form>
-    <input type='text' id='toggke-key' value='ctrl+space'>
+  <form id='settings'>
+    <input type='text' id='toggle-key' placeholder='type your preferred hotkey'>
     <small>Please see all the available keys on <a href='https://github.com/electron/electron/blob/master/docs/api/accelerator.md' target='blank'>Accelerator</a></small>
     <button type="submit"><i class='fa fa-pencil'></i> Save</button>
   </form>
