Show save icon when the settings get saved

--- a/app/settings.html
+++ b/app/settings.html
@@ -3,6 +3,6 @@
   <form id='settings'>
     <input type='text' id='toggle-key' placeholder='type your preferred hotkey'>
     <small>Please see all the available keys on <a href='https://github.com/electron/electron/blob/master/docs/api/accelerator.md' target='blank'>Accelerator</a></small>
-    <button type="submit"><i class='fa fa-pencil'></i> Save</button>
+    <button id='btn-save' type="submit">Save</button>
   </form>
 </div>
