--- a/app/settings.html
+++ b/app/settings.html
@@ -1,8 +1,19 @@
 <div class='settings'>
-  <h4>Toji Hotkey</h4>
   <form id='settings'>
+    <h4>Toji Hotkey</h4>
     <input type='text' id='toggle-key' placeholder='type your preferred hotkey'>
-    <small>Please see all the available keys on <a href='https://github.com/electron/electron/blob/master/docs/api/accelerator.md' target='blank'>Accelerator</a></small>
+    <div class='align-center'><small>Please see all the available keys on <a href='https://github.com/electron/electron/blob/master/docs/api/accelerator.md' target='blank'>Accelerator</a></small></div>
+    <h4>Options</h4>
+    <div class='options'>
+      <label>Open at login</label>
+      <div class="onoff">
+          <input type="checkbox" name="onoff" class="onoff-checkbox" id="myonoff" checked>
+          <label class="onoff-label" for="myonoff">
+              <span class="onoff-inner"></span>
+              <span class="onoff-switch"></span>
+          </label>
+      </div>
+    </div>
     <button id='btn-save' type="submit">Save</button>
   </form>
 </div>
