Add an auto launch at login setting

--- a/app/settings.html
+++ b/app/settings.html
@@ -7,8 +7,8 @@
     <div class='options'>
       <label>Open at login</label>
       <div class="onoff">
-          <input type="checkbox" name="onoff" class="onoff-checkbox" id="myonoff" checked>
-          <label class="onoff-label" for="myonoff">
+          <input type="checkbox" name="onoff" class="onoff-checkbox" id="onoff-login" checked>
+          <label class="onoff-label" for="onoff-login">
               <span class="onoff-inner"></span>
               <span class="onoff-switch"></span>
           </label>
