--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
   <header>
     <a class='back hide'><i class='fa fa-chevron-left'></i></a>
     <a class='gear'><i class='fa fa-cog'></i></a>
+    <a class='quit'><i class='fa fa-times-circle'></i></a>
     <span>toji</span>
   </header>
   <section class='root'></section>
